2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* Tests.cs: Added.