@@ -1,5 +1,9 @@
 2007-08-03  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* Utility.cs: Added GetOptions.
+
+2007-08-03  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* BorderGapMaskConverterTest.cs: Added some tests.
 
 2007-08-03  George Giolfan  <georgegiolfan@yahoo.com>
