@@ -1,3 +1,7 @@
+2007-08-05  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* System.Windows.Shapes: Added.
+
 2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* Tests.cs: Added.
